# quantum

./: .dockerignore  .env.example  .gitignore  Makefile  QUICKSTART.md  README.md  docker-compose.yml  quantum.code-workspace
algorand/: .env.example  .gitignore  Dockerfile  README.md  aerich.ini  buf.gen.yaml  buf.yaml  main.py  pyproject.toml
algorand/migrations/models/: 0_init.sql
algorand/proto/algorand/v1/: alerts.proto  analytics.proto  backtest.proto  catalog.proto  ml.proto
algorand/proto/common/v1/: common.proto
algorand/scripts/: bootstrap_dev.sh  generate_proto.sh  run_local_stack.sh  seed_sample_data.py
algorand/src/algorand/: __init__.py  cli.py
algorand/src/algorand/app/: container.py  duckdb_ui.py  server.py  worker.py
algorand/src/algorand/core/: clock.py  config.py  errors.py  events.py  external_config.py  logging.py
algorand/src/algorand/infra/cache/: __init__.py  redis_client.py
algorand/src/algorand/infra/db/: __init__.py  migrate.py  models.py  runtime.py
algorand/src/algorand/infra/events/: __init__.py  publisher.py  redpanda.py
algorand/src/algorand/infra/integrations/: __init__.py  airflow.py  feast.py  mlflow.py
algorand/src/algorand/infra/telemetry/: __init__.py  otel.py
algorand/src/algorand/interfaces/connectrpc/: app.py  http.py
algorand/src/algorand/interfaces/temporal/: runtime.py
algorand/src/algorand/modules/alerts/: domain.py  ports.py  repo.py  schemas.py  service.py
algorand/src/algorand/modules/analytics/: domain.py  ports.py  repo.py  schemas.py  service.py
algorand/src/algorand/modules/backtests/: domain.py  ports.py  repo.py  schemas.py  service.py
algorand/src/algorand/modules/catalog/: domain.py  ports.py  repo.py  schemas.py  service.py
algorand/src/algorand/modules/features/: domain.py  ports.py  repo.py  schemas.py  service.py
algorand/src/algorand/modules/indicators/: domain.py  ports.py  repo.py  schemas.py  (+1 more)
algorand/src/algorand/tests/: conftest.py
(+382 files in other folders)
